fix: 修复全部异常事件查询时速度过慢的问题
