# backend/docs/swagger.json
@@ -210,6 +210,13 @@
                         "name": "endpoint",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "异常事件类型过滤",
+                        "name": "anormalTypes",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -5113,8 +5120,8 @@
                         "$ref": "#/definitions/clickhouse.PagedAlertEvent"
                     }
                 },
-                "totalCount": {
-                    "type": "integer"
+                "pagination": {
+                    "$ref": "#/definitions/model.Pagination"
                 }
             }
         },
